# python-template

./: .editorconfig  .gitignore  .lefthook.yml  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.md  copier.yml  pyproject.toml
template/: .lefthook.yml  .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja
template/src/{{module_name}}/: main.py
template/tests/: conftest.py  test_dummy.py
{{project_name}}/: .editorconfig
{{project_name}}/src/{{module_name}}/: main.py
