[project]
name = "python-template"
version = "0.1.0"
description = "Python template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["bandit==1.8.3", "lefthook==1.11.13", "pyright==1.1.401", "pytest==8.4.0", "pytest-sugar==1.0.0"]

[tool.bandit]
exclude_dirs = [
  ".git",          # common env
  ".idea",         # common env
  ".venv",         # common env
  ".vscode",       # common env
  ".zed",          # common env
  ".mypy_cache",   # tools
  ".pytest_cache", # tools
  ".ruff_cache",   # tools
  "docs",          # docs
]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py", "./tests/conftest.py"]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
exclude = [
  "**/__pycache__",  # common env
  "**/.*",           # common env
  "**/node_modules", # common env
]
